# challenge_list_notes

./: .env_example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
app/: settings.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py
notes/: forms.py  serializers.py  urls.py  views.py
notes/static/css/: notes.css
notes/static/js/: notes.js
notes/templates/notes/: note_list.html
